Fix download button not covering entire image

--- a/src/app/asset-groups.component.scss
+++ b/src/app/asset-groups.component.scss
@@ -142,13 +142,18 @@ $border-color: rgb(65, 59, 48);
       padding: 10px;
 
       .download {
-        width: 15%;
+        width: 100%;
+        height: 100%;
         display: block;
         text-align: center;
 
-        svg {
-          fill: $primary-dark;
-          width: 100%;
+        .inner {
+          width: 15%;
+
+          svg {
+            fill: $primary-dark;
+            width: 100%;
+          }
         }
       }
     }
